<resources>
    <string name="app_name" translatable="false">Asrik</string>
    <string name="already_have_a_account_sign_in">Already have a account? sign-in</string>
    <string name="continue_text">Continue</string>
    <string name="registration">Registration</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="phone_placeholder">9012345086</string>
    <string name="verification">Verification</string>
    <string name="please_enter_the_otp">Please enter the OTP</string>
    <string name="resend_code_in">Resend code in</string>
    <string name="resend_code">Resend code</string>
    <string name="hashes">######</string>
    <string name="learning_about">Learning About</string>
    <string name="you">You</string>
    <string name="units">units</string>
    <string name="your_full_name">Your full name</string>
    <string name="your_email">Your email</string>
    <string name="company_email">help@asrik.com</string>
    <string name="take_your_photo">Take your photo</string>
    <string name="your_photo_made_us_to_ndeliver_right_person">Your photo help us\ndeliver right person</string>
    <string name="finish">Finish Registration</string>
    <string name="your_area_pin_code">Your area PIN Code</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admin">Admin</string>
    <string name="normal_user">Normal User</string>
    <string name="continue_as">Continue as</string>
    <string name="blood_requests">Blood Requests</string>
    <string name="request_blood">Request blood</string>
    <string name="locate">Locate</string>
    <string name="chat">Chat</string>
    <string name="share">Share</string>
    <string name="raise_request">Raise Request</string>
    <string name="submit">Submit</string>
    <string name="area_pin_code">Area PIN Code</string>
    <string name="_400001">400001</string>
    <string name="blood_group">Blood Group</string>
    <string name="_5_units">5 units</string>
    <string name="quantity">Quantity</string>
    <string name="severity">Severity</string>
    <string name="hospital_address">Hospital Address</string>
    <string name="mark_location">Mark\nLocation</string>
    <string name="add_blood_requirement_proof">Add blood requirement proof</string>
    <string name="select_file">Select file</string>
    <string name="location">Location</string>
    <string name="contact">Contact</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="about_me">About me</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="address">Address</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="camp_address">Camp Address</string>
    <string name="date">Date</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="notify">Notify</string>
    <string name="camp_date">Camp date</string>
    <string name="mark_emergency">Mark Emergency</string>
    <string name="emergency">EMERGENCY</string>
    <string name="verified">VERIFIED</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="remind_me">Remind Me</string>
    <string name="blood_camps">Blood Donation Camps</string>
    <string name="no_nearby_blood_donation_camps_available">No nearby blood donation camp available</string>
    <string name="notify_blood_donation_camps">Blood donation camps</string>
    <string name="search_request">Search by seeker name</string>
    <string name="relevance">Relevance</string>
    <string name="severity_high_to_low">Severity: High to Low</string>
    <string name="severity_low_to_high">Severity: low to High</string>
    <string name="newest_first">Newest First</string>
    <string name="oldest_first">Oldest First</string>
    <string name="hospitals">Hospitals</string>
    <string name="blood_banks">Blood Banks</string>
    <string name="blood_donation_camps">Blood Donation Camps</string>
    <string name="pharmacies">Pharmacies</string>
    <string name="request_history">Request History</string>
    <string name="you_haven_t_made_any_request">You haven\'t made any request</string>
    <string name="normalize">Normalize</string>
    <string name="revoke">Revoke</string>
    <string name="req_revoked">Request Revoked</string>
    <string name="req_rejected">Request Rejected by Admin</string>
    <string name="no_active_chats_available">No active chats available</string>
    <string name="chats">Chats</string>
    <string name="message">Message</string>
    <string name="send_message">Send Message</string>
    <string name="online">online</string>
    <string name="typing">typing....</string>
    <string name="send_image">Send Image</string>
    <string name="send_document">Send Document</string>
    <string name="remove_selected_file">Remove Selected File</string>
    <string name="call">Call</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="language">Language</string>
    <string name="english" translatable="false">English</string>
    <string name="hindi" translatable="false">हिंदी</string>
    <string name="restart">Restart app to see changes</string>
    <string name="edit_location">Edit\nLocation</string>
    <string name="chat_bot">CHAT BOT</string>
    <string name="bot_name" translatable="false">Dash</string>
    <string name="no_request_pending">No request pending</string>
    <string name="blood_donation_camp">Blood Donation Camp</string>
    <string name="cool_down">Cool down</string>
    <string name="logout_as_admin">Logout as admin</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="logout_message">You will be removed as admin of your area and the position will be vacant for other users.</string>
    <string name="failed">Failed</string>
    <string name="location_service">Location Service</string>
    <string name="turn_gps_on">Please turn on GPS for better experience.</string>
    <string name="ok">OK</string>
    <string-array name="blood_groups">
        <item>Blood Group</item>
        <item>A+</item>
        <item>A-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string-array name="severities">
        <item>Severity</item>
        <item>Extreme</item>
        <item>Major</item>
        <item>Moderate</item>
        <item>Minor</item>
    </string-array>
</resources>