<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.homefragments.RaiseRequest">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/raise_request"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/submit"
                android:textAlignment="textEnd"
                android:textColor="#2F5FF3"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/ll1">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/dp"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="center" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="#0B0103"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/city_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="#0B0103"
                    android:textSize="13sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/pin_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/ll2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center_vertical"
                android:text="@string/area_pin_code"
                android:textColor="#ff0479"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="@font/poppins_medium"
                android:gravity="top"
                android:hint="@string/_400001"
                android:inputType="number"
                android:letterSpacing="0.1"
                android:lineSpacingExtra="4dp"
                android:maxLength="6"
                android:maxLines="5"
                android:textSize="14sp"
                tools:ignore="TextFields" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/city_state_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/pin_ll">

            <TextView
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:includeFontPadding="false"
                android:text="@string/city"
                android:textColor="@color/theme_color_dark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:includeFontPadding="false"
                android:text="@string/state"
                android:textColor="@color/theme_color_dark"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/blood_details_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="35dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/city_state_ll">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="0dp"
                android:paddingEnd="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center_vertical"
                    android:text="@string/blood_group"
                    android:textColor="#ff0479"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/blood_group_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center_vertical"
                    android:text="@string/quantity"
                    android:textColor="#ff0479"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/units"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="top"
                    android:hint="@string/_5_units"
                    android:includeFontPadding="false"
                    android:inputType="number"
                    android:letterSpacing="0.1"
                    android:lineSpacingExtra="4dp"
                    android:maxLines="5"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/severity_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="35dp"
            android:orientation="vertical"
            android:paddingStart="0dp"
            android:paddingEnd="5dp"
            app:layout_constraintTop_toBottomOf="@id/blood_details_ll">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center_vertical"
                android:text="@string/severity"
                android:textColor="#ff0479"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/severity_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/address_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/severity_ll">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="0dp"
                android:paddingEnd="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center_vertical"
                    android:text="@string/hospital_address"
                    android:textColor="#ff0479"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="top"
                    android:hint="@string/address"
                    android:includeFontPadding="false"
                    android:letterSpacing="0.1"
                    android:lineSpacingExtra="4dp"
                    android:maxLines="5"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/choose_on_map"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingHorizontal="10dp"
                android:text="@string/mark_location"
                android:textColor="@color/theme_color_dark"
                android:textSize="12sp"
                app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/media_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="35dp"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            app:layout_constraintBottom_toTopOf="@id/progress"
            app:layout_constraintTop_toBottomOf="@id/address_ll">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center_vertical"
                android:text="@string/add_blood_requirement_proof"
                android:textColor="#ff0479"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/select_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:includeFontPadding="false"
                android:text="@string/select_file"
                android:textColor="@color/theme_color_dark"
                android:textSize="15sp" />

        </LinearLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            app:indicatorColor="@color/green1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:trackColor="@color/grey2"
            app:trackThickness="8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>