<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activities.LocaleSelection">

    <RadioGroup
        android:id="@+id/language_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/pink"
            android:fontFamily="@font/poppins_regular"
            android:includeFontPadding="false"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/english"
            android:textColor="@color/theme_color_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/hi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/pink"
            android:fontFamily="@font/poppins_regular"
            android:includeFontPadding="false"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/hindi"
            android:textColor="@color/theme_color_light"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RadioGroup>

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="0dp"
        android:layout_height="60sp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_bg1"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/continue_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>