<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.adminfragments.BloodCamp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/raise_request"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/notify"
                android:textAlignment="textEnd"
                android:textColor="#2F5FF3"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/ll1">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/dp"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="center" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="#0B0103"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/city_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="#0B0103"
                    android:textSize="13sp" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/date_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="35dp"
            android:orientation="vertical"
            android:paddingStart="0dp"
            android:paddingEnd="5dp"
            app:layout_constraintTop_toBottomOf="@id/ll2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center_vertical"
                android:text="@string/date"
                android:textColor="#ff0479"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:includeFontPadding="false"
                android:padding="4dp"
                android:text="@string/camp_date"
                android:textColor="@color/theme_color_dark"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/time_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="35dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/date_ll">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="0dp"
                android:paddingEnd="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center_vertical"
                    android:text="@string/start_time"
                    android:textColor="#ff0479"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:includeFontPadding="false"
                    android:padding="4dp"
                    android:text="@string/start_time"
                    android:textColor="@color/theme_color_dark"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center_vertical"
                    android:text="@string/end_time"
                    android:textColor="#ff0479"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/end_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:includeFontPadding="false"
                    android:padding="4dp"
                    android:text="@string/end_time"
                    android:textColor="@color/theme_color_dark"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/address_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/time_ll">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="0dp"
                android:paddingEnd="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center_vertical"
                    android:text="@string/camp_address"
                    android:textColor="#ff0479"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="top"
                    android:hint="@string/address"
                    android:includeFontPadding="false"
                    android:letterSpacing="0.1"
                    android:lineSpacingExtra="4dp"
                    android:maxLines="5"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/choose_on_map"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingHorizontal="10dp"
                android:text="@string/mark_location"
                android:textColor="@color/theme_color_dark"
                android:textSize="12sp"
                app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />

        </LinearLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="@color/green1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_ll"
            app:trackColor="@color/grey2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>